--- a/API/static/css/style.css
+++ b/API/static/css/style.css
@@ -5,3 +5,8 @@
   padding: 0;
   box-sizing: border-box;
 }
+#body{
+  background-color: pink;
+  align-items: center;
+  text-decoration: overline;
+}
